# magic-space

./: LICENSE  README.md
crates/magic-space/: Cargo.toml
crates/magic-space-bench/: Cargo.toml
crates/magic-space-bench/src/: main.rs
crates/magic-space-derive/: Cargo.toml
crates/magic-space-derive/src/: lib.rs
crates/magic-space/src/: lib.rs
